[package]
name = "generate_204"
version = "0.4.0"
authors = ["George Cheng <Gerhut@GMail.com>"]
edition = "2018"
description = "Generate_204 as a Service."
homepage = "https://hub.docker.io/r/gerhut/generate_204"
repository = "https://github.com/Gerhut/generate_204"
license = "Unlicense"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
